Fixed social media icons on Firefox (#189)

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -683,7 +683,7 @@ i {
           &.social a,
           &.social a:hover {
             font-size: 1.3em;
-            padding: .95em .6em;
+            padding: .95em .6em .73em;
             vertical-align: middle;
           }
         }
